--- a/index.Rmd
+++ b/index.Rmd
@@ -1,14 +1,18 @@
 ---
 title: "Lab journal"
-author: "by: Your Name"
+author: "by: Anuschka Peelen"
 bibliography: references.bib
+
+```{r}
+2 + 2
+```
 
  
 ---
 
 ```{r, install remotely, globalsettings, echo=FALSE, warning=FALSE, results='hide'}
-# install.packages("remotes")
-#remotes::install_github("rlesur/klippy")
+install.packages("remotes")
+remotes::install_github("rlesur/klippy")
 ``` 
 
 ```{r, globalsettings, echo=FALSE, warning=FALSE, results='hide'}
