--- a/index.Rmd
+++ b/index.Rmd
@@ -2,14 +2,12 @@
 title: "Lab journal"
 author: "by: Anuschka Peelen"
 bibliography: references.bib
-
- 
 ---
 
 ```{r, install remotely, globalsettings, echo=FALSE, warning=FALSE, results='hide', eval=FALSE}
 install.packages("remotes")
 remotes::install_github("rlesur/klippy")
-``` 
+```
 
 ```{r, globalsettings, echo=FALSE, warning=FALSE, results='hide'}
 library(knitr)
@@ -31,67 +29,50 @@ klippy::klippy(position = c('top', 'right'))
 #klippy::klippy(tooltip_message = 'Click to copy', tooltip_success = 'Done')
 ```
 
+------------------------------------------------------------------------
 
-
-
-----
-
-:::::::::::::: {.columns}
+::: columns
 ::: {.column width="50%"}
-
 # My Lab Journal
-Last compiled on `r format(Sys.time(), '%B, %Y')`  
 
-**
-<br>
+Last compiled on `r format(Sys.time(), '%B, %Y')`
 
-----
+\*\* <br>
 
-##   
+------------------------------------------------------------------------
 
-Everyone can fork this repository. Use this example to journal your lab work and assignments. 
+## 
 
-We, Jochem Tolsma and Bas Hofstra, use this repository for our Social Network Analysis For Social Scientists course [@SNASS]. 
+Everyone can fork this repository. Use this example to journal your lab work and assignments.
 
-
+We, Jochem Tolsma and Bas Hofstra, use this repository for our Social Network Analysis For Social Scientists course [@SNASS].
 :::
+
 ::: {.column width="50%"}
-
-
-
-
 ![](images/oefen.jpg)
-
-
 :::
-::::::::::::::
-
+:::
 
 ## How to use
 
-1. Fork the repository for this website and follow instructions on `README` to get started [here](https://github.com/JochemTolsma/labjournal).  
+1.  Fork the repository for this website and follow instructions on `README` to get started [here](https://github.com/JochemTolsma/labjournal).
 
-2. Journal your work, by editing the .Rmd-files
+2.  Journal your work, by editing the .Rmd-files
 
-3. ...
+3.  ...
 
-4. Change everything to make it your own!
-
+4.  Change everything to make it your own!
 
 <br>
 
 Use the top menu to navigate through the journal.
 
-
-----
+------------------------------------------------------------------------
 
 ## Research question
+
 Test
 
-----
+------------------------------------------------------------------------
 
 # References
-
-
-
-
