--- a/lab1.Rmd
+++ b/lab1.Rmd
@@ -1,12 +1,13 @@
 ---
-title: "Journal 1"
+title: "Research question"
 #bibliography: references.bib
 author: "Anuschka Peelen"
+editor_options: 
+  markdown: 
+    wrap: 72
 ---
 
-
-
-```{r, globalsettings, echo=FALSE, warning=FALSE, results='hide'}
+```{r warning=FALSE, globalsettings, echo=FALSE, results='hide'}
 library(knitr)
 
 knitr::opts_chunk$set(echo = TRUE)
@@ -30,18 +31,63 @@ Last compiled on `r format(Sys.time(), '%B, %Y')`
 
 <br>
 
-----
-  
+------------------------------------------------------------------------
+
 This is just an example page of your `r colorize("lab journal", "red")`.
 You can journal the assignments of the first day here.
-  
 
-----
+## Research question
 
+ICT has had an influence on social networks (Licoppe & Smoreda, 2005).
+Social media can activate latent ties or develop and strengthen weak
+ties (Haythornthwaite, 2002) and therefore provides opportunities to
+develop new ties. As the internet makes it possible to connect with
+others worldwide, being less limited to spatial connections with others
+(Tranos, 2020). When translating this to data about scientists,
+increased opportunities to communicate online may have created new
+collaborations between co-authors that may have not happened if there
+was no internet. This could have an influence on the density of networks
+as well: It is now easier to collaborate with new people based on
+certain research ideas, which may limit repeated co-authorships and
+therefore decreases density. Furthermore, scientists have become less
+bounded by spatial restrictions, as it is now easier to collaborate with
+scientists all over the world. This could lead to social networks that
+are geographically broader than they were before internet was used to
+collaborate. Therefore, I would like to focus on the following research
+questions:
+
+How has the density of social networks between co-authors changed
+between 2002 and 2022 (as a result of ICT)?
+
+How has the spatiality within social networks between co-authors changed
+between 2002 and 2022 (as a result of ICT)?
+
+Societally relevant because it can say something about cohesion if
+networks become less dense due to more ICT. Also, it is important to
+study the influence of a more digitalized society (also on academics).
+Scientifically relevant because internet can be a "new" important
+criterion of selection between ego's and alters. Relevant to study this
+with SNA as it maps how exactly networks change as a result of internet,
+whereas studies that make no use of SNA are only able to provide
+insights in internet use on the macro level and cohesion on the macro
+level. These research questions are mostly part of the "selection"
+literature within SNA.
+
+(Will move these to references document later)
+
+Haythornthwaite, C.(2002). Strong, Weak, and Latent Ties and the Impact
+of New Media. The Information Society, 18(5), 385--401.
+<https://doi.org/10.1080/01972240290108195> Licoppe, C., & Smoreda, Z.
+(2005). Are social networks technologically embedded?: How networks are
+changing today with changes in communication technology. Social
+Networks, 27(4), 317--335.
+<https://doi.org/10.1016/j.socnet.2004.11.001> Tranos, E. (2020). Social
+Network Sites and Knowledge Transfer: An Urban Perspective. Journal of
+Planning Literature, 35(4), 408--422.
+<https://doi.org/10.1177/0885412220921526>
+
+------------------------------------------------------------------------
 
 ```{r}
 print("Hello Lab Journal")
 ```
-
-
-
