--- a/index.Rmd
+++ b/index.Rmd
@@ -41,11 +41,8 @@ Last compiled on `r format(Sys.time(), '%B, %Y')`
 
 ------------------------------------------------------------------------
 
-## 
 
-Everyone can fork this repository. Use this example to journal your lab work and assignments.
 
-We, Jochem Tolsma and Bas Hofstra, use this repository for our Social Network Analysis For Social Scientists course [@SNASS].
 :::
 
 ::: {.column width="50%"}
@@ -53,26 +50,8 @@ We, Jochem Tolsma and Bas Hofstra, use this repository for our Social Network An
 :::
 :::
 
-## How to use
+## How to use this website
+In the top menu, you can navigate through different parts of this project. In the journal, 
+weekly tutorials will be uploaded. Parts of the final research will be posted under report.
 
-1.  Fork the repository for this website and follow instructions on `README` to get started [here](https://github.com/JochemTolsma/labjournal).
 
-2.  Journal your work, by editing the .Rmd-files
-
-3.  ...
-
-4.  Change everything to make it your own!
-
-<br>
-
-Use the top menu to navigate through the journal.
-
-------------------------------------------------------------------------
-
-## Research question
-
-Test
-
-------------------------------------------------------------------------
-
-# References
