--- a/references.bib
+++ b/references.bib
@@ -27,3 +27,11 @@
   note = {},
   url = {https://jtolsma.nl/SNASS/},
 }
+
+
+@article{tolsma2010naar,
+  title={Naar een open samenleving? Recente ontwikkelingen in sociale stijging en daling in Nederland},
+  author={Tolsma, Jochem and Wolbers, Maarten Hendrik Jan},
+  year={2010},
+  publisher={Den Haag: RMO}
+}
